# Object_Oriented_Programming_Projects

./: readme.md
Advance_Data_Analysis_Tool/: chainlit.yaml  main.py  pyproject.toml
Command_Line_RPG_Game/: main.py
Financial_Portfolio_Analyzer/: README.md  main.py  pyproject.toml  requirements.txt
Financial_Portfolio_Analyzer/src/: data_fetcher.py  investment_advisor.py  portfolio_analyzer.py  risk_analyzer.py  visualization.py
advance_agent/: main.py  pyproject.toml
advance_agent/advance_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
money_checker/: app.py  extractor.py  main.py  predictor.py  processor.py  pyproject.toml  train.py
money_checker/static/: styles.css
money_checker/templates/: index.html
password_generator/: main.py
quiz_app/: main.py
simple_openai_sdk_agent/: main.py  pyproject.toml
simple_openai_sdk_agent/simple_openai_sdk_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
time_zone/: main.py  pyproject.toml
todo_list/: main.py  todo.json
unit_converter/: main.py
